force-app/main/default/objects/Product_Bundle__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Product_Bundle__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundles</relationshipLabel>
    <relationshipName>Product_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>