force-app/main/default/objects/Product_Bundle__c/fields/CallRevue_360_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>CallRevue_360_Item_ID__c</fullName>
    <formula>Bundle_Product__r.CallRevu_Item_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallRevue 360 Item ID</label>
    <type>Text</type>
</CustomField>